# Seedling

./: .gitignore  CHANGELOG.md  README.md  install.bat  install.sh  pyproject.toml  scan.py  test_suite.sh
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README_zh.md
scan_tool/: __init__.py  builder.py  cli.py  exporter.py  scanner.py  utils.py
seedling/: __init__.py  main.py
seedling/commands/scan/: __init__.py  analyzer.py  exclude.py  explorer.py  full.py  grep.py  json_output.py  search.py  skeleton.py
seedling/core/: __init__.py  config.py  detection.py  filesystem.py  io.py  logger.py  patterns.py  sysinfo.py  traversal.py  ui.py
tests/: __init__.py  test_build_architect.py  test_core_filesystem.py  test_core_filesystem_edge.py  test_core_io.py  test_scan_exclude.py  test_scan_skeleton.py  test_v24_features.py
